Fix icon align

--- a/weather_no_geolocation/style1.css
+++ b/weather_no_geolocation/style1.css
@@ -10,8 +10,15 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    margin: 20px;
     background-position: center right;
+}
+
+section {
+    width: 90%;
+    height: 600px;
+    margin: 30px auto;
+    background-color: rgba(107,115,228,0.3);
+    border-radius: 20px;
 }
 
 h1 {
@@ -93,6 +100,9 @@ h2, #input_field {
 
 .iconImg {
     padding: 0 10px;
+    vertical-align: middle;
+    width: 60px;
+    height: 60px;
 }
 
 .infoBox {
@@ -151,6 +161,9 @@ button:hover {
     }
     .infoBox {
         background-color: rgba(179,6,179,0.5);
+    }
+    .iconImg {
+        margin-top: 20px;
     }
 
 }
